# AozCoder

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  book.toml  build.rs  clippy.toml
.github/workflows/: ci.yml  docs.yml  nightly.yml
docs/: GETTING-STARTED.md  RAW-URL-SITEMAP.md  SUMMARY.md
schemas/: runtime_envelope_v1.json
src/: cli.rs  config.rs  lib.rs  main.rs
src/client/: connection.rs  envelope.rs  envelope_handler.rs  mod.rs  sse_parser.rs
src/print/: mod.rs
src/state/: conversation.rs  mod.rs
src/tui/: app.rs  event_loop.rs  mod.rs
src/ui/: mod.rs  prompt_area.rs  status_bar.rs  transcript.rs
tests/: integration.rs  ui_rendering.rs
