[package]
name = "aozcoder"
version = "0.1.0-nightly+20260422"
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aoz-Vector/AozCoder"
description = "Terminal UI client for the Vexcoder normalized inference API"
keywords = ["tui", "cli", "sse", "ai", "ratatui"]
categories = ["command-line-utilities", "asynchronous"]

[[bin]]
name = "aozcoder"
path = "src/main.rs"

[lib]
name = "aozcoder"
path = "src/lib.rs"

[dependencies]
# Terminal UI — exact pins per RFC-reproducible-builds
ratatui = { version = "0.30.0", features = ["all-widgets", "unstable-rendered-line-info"] }
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }

# Async runtime — §4 of the Tokio stability guarantee: semver-compatible patch
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
async-stream = "0.3.6"

# HTTP transport and SSE framing
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
eventsource-stream = "0.2.3"

# Serialization — serde_json 1.0 provides the Value type used throughout
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# Structured error propagation
thiserror = "2.0.3"
anyhow = "1.0.93"

# Structured logging — RUST_LOG controls filter at runtime
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# CLI surface — derives Parser via proc-macro
clap = { version = "4.5.21", features = ["derive", "env"] }

# Layered configuration — file → env → defaults
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "0.8.19"

# Utilities
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
unicode-width = "0.2.0"
strip-ansi-escapes = "0.2.0"
dirs = "5.0.1"

[dev-dependencies]
wiremock = "0.6.2"
rstest = "0.23.0"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "test-util"] }

[build-dependencies]
# Build script uses sha2 for schema fingerprinting (no md5 — deprecated in FIPS contexts)
sha2 = "0.10.8"
hex = "0.4.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[features]
default = ["tls"]
tls = ["reqwest/rustls-tls"]
debug-ui = ["ratatui/unstable-widget-ref"]
